deployment.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: demo-app
spec:
  replicas: 4

  strategy:
    canary:
      steps:
      - setWeight: 20
      - pause: { duration: 30 }
      - setWeight: 50
      - pause: { duration: 30 }
      - setWeight: 100

  selector:
    matchLabels:
      app: demo-app

  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
      - name: demo-app
        image: vashishtd/demo-app:1572a369392880e52bbd8f87f06b342c63561e44   # ✅ placeholder
        ports:
        - containerPort: 80
